# sumo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  index.html  pyproject.toml  style.css
.github/workflows/: precommit.yml  static.yml  test.yml
g1_extensions/: CMakeLists.txt  __init__.py  bindings.cpp  g1_rollout.cpp  g1_rollout.h  pyproject.toml  rollout.cpp  rollout.h
g1_extensions/policy/: g1_velocity_policy.onnx
src/: README.md  index.html
sumo/: __init__.py  cli.py
sumo/app/dora/: controller.py  controller_node.py  g1_simulation.py  simulation.py  simulation_node.py  visualization.py  visualization_node.py
sumo/configs/: sumo_default.yaml
sumo/controller/: __init__.py  controller.py  optimizer_overrides.py  overrides.py
sumo/models/xml/g1/: g1.xml  g1_box.xml  g1_box_carry.xml  g1_chair.xml  g1_door.xml  g1_table.xml
sumo/models/xml/objects/: table_short.xml
sumo/models/xml/objects/barbell/: barbell.xml
sumo/models/xml/objects/crowd_barrier/: crowd_barrier.xml  crowd_barrier_defs.xml
sumo/models/xml/objects/rugged_box/: rugged_box.xml
sumo/models/xml/objects/tire_rack/: tire_rack.xml  tire_rack_defs.xml
sumo/models/xml/objects/traffic_cone/: traffic_cone.xml  traffic_cone_defs.xml
sumo/models/xml/objects/yellow_chair/: yellow_chair.xml  yellow_chair_defs.xml
sumo/models/xml/spot_components/: sensor.xml
sumo/models/xml/spot_tasks/: spot_barrier.xml  spot_rugged_box.xml  spot_table_short.xml  spot_tire.xml  spot_tire_rack.xml  spot_traffic_cone.xml  spot_two_tires.xml  spot_yellow_chair.xml  spot_yellow_chair_ramp.xml
sumo/run_mpc/: __main__.py  run_mpc.py
sumo/tasks/: __init__.py
sumo/tasks/g1/: g1_base.py  g1_box.py  g1_chair_push.py  g1_door.py  g1_table_push.py
sumo/tasks/spot/: __init__.py  spot_barrier_drag.py  spot_barrier_upright.py  spot_base.py  spot_box_push.py  spot_box_upright.py  spot_chair_push.py  spot_chair_ramp.py  spot_chair_upright.py  spot_cone_push.py  spot_cone_upright.py  spot_constants.py  spot_push.py  spot_rack_push.py  spot_rack_upright.py  spot_rugged_box_push.py  spot_tire_push.py  spot_tire_rack_drag.py  spot_tire_roll.py  spot_tire_stack.py  spot_tire_upright.py  spot_upright.py
sumo/utils/: extensions.py  indexing.py  mujoco.py
tests/: conftest.py  test_imports.py  test_spot_asset_resolution.py  test_tasks.py
